Fixed x-scrollbar overflow and did some chages.

--- a/styles/presentation.css
+++ b/styles/presentation.css
@@ -1,43 +1,12 @@
-.segment {
-    text-align: center;
-}
-
-.segment h3 {
-    font-size: 4rem;
-    font-family: 'Reem Kufi', sans-serif;
-	font-weight: thin;
-	margin-top: 9rem;
-}
-
-.segment h3:after {
-	content: "";
-    display: block;
-	border-bottom: .2rem solid #dc221a;
-    left: 50%;
-    margin-left: -1.5rem;
-    position: absolute;
-    width: 3rem;
-}
-
-.segment i {
-    color: rgb(0, 98, 51);
-}
-
 nav {
     padding: 10px 0;
+    text-align: center;
     border-bottom: .1rem solid #e4e4e4;
 }
 
-/*nav ul {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: space-between;;
-}*/
-
 nav ul li {
-    padding: 10px 40px;;
-	display: inline-block;
+    padding: 10px 40px;
+    display: inline-block;
 }
 
 nav ul li a {
@@ -47,48 +16,82 @@ nav ul li a {
     text-transform: uppercase;
 }
 
-blockquote {
-	font-size: 1.3rem;
-	font-family: 'Arvo', serif;
-	text-align: center;
-	
-  	margin: 3.5em 10px;
-  	padding: 0.5em 10px;
-  	quotes: "\201C""\201D""\2018""\2019";
-	
-	word-spacing: 0.2rem;
-	line-height: 2.5rem;
-	
-	text-align: justify;
+.glimpse {
+    text-align: center;
 }
 
-blockquote img {
-	height: 32px;
-	widows: 32px;
-	vertical-align: -0.3rem;
+.glimpse h3 {
+    font-size: 4rem;
+    font-family: 'Reem Kufi', sans-serif;
+    font-weight: thin;
+    margin-top: 9rem;
 }
 
-blockquote:before {
-  color: #ccc;
-  content: open-quote;
-  font-size: 4em;
-  line-height: 0.1em;
-  vertical-align: -0.4em;
+.glimpse h3:after {
+    content: "";
+    display: block;
+    border-bottom: .2rem solid #dc221a;
+    left: 50%;
+    margin-left: -1.5rem;
+    position: absolute;
+    width: 3rem;
 }
 
-blockquote:after {
-  color: #ccc;
-  content: close-quote;
-  font-size: 4em;
-  line-height: 0.1em;
-  vertical-align: -0.6em;
+.glimpse i {
+    color: rgb(0, 98, 51);
 }
 
-blockquote p {
-  display: inline;
+.glimpse blockquote {
+    font-size: 1.3rem;
+    font-family: 'Arvo', serif;
+    text-align: center;
+
+    margin: 3.5em 10px;
+    padding: 0.5em 10px;
+    quotes: "\201C""\201D""\2018""\2019";
+
+    word-spacing: 0.2rem;
+    line-height: 2.5rem;
+
+    text-align: justify;
 }
 
-.video-wrapper img {
-	height: auto;
-	width: 100%;
+.glimpse blockquote img {
+    height: 32px;
+    widows: 32px;
+    vertical-align: -0.3rem;
+}
+
+.glimpse blockquote:before {
+    color: #ccc;
+    content: open-quote;
+    font-size: 4em;
+    line-height: 0.1em;
+    vertical-align: -0.4em;
+}
+
+.glimpse blockquote:after {
+    color: #ccc;
+    content: close-quote;
+    font-size: 4em;
+    line-height: 0.1em;
+    vertical-align: -0.6em;
+}
+
+.glimpse blockquote p {
+    display: inline;
+}
+
+.video-wrapper {
+    position: relative;
+}
+
+.video-wrapper iframe {
+    background-image: url();
+    background-size: contain;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
