--- a/styles/slider.css
+++ b/styles/slider.css
@@ -2,17 +2,12 @@
 .full-size {
 	width: 100vw;
 	height: 100vh;
+	max-width: 100%;
 }
 
 /* Absolutely Positioned (R) */
 .position-absolute {
 	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-.position-fixed {
-	position: fixed;
 	top: 0;
 	left: 0;
 }
